build(java): generate FFM bindings with Jextract